# cpp-starter-template

./: CMakeLists.txt  README.md
cmake/: HunterGate.cmake
scripts/: new-cpp-project
test/: CMakeLists.txt  main.test.cpp
